--- a/assets/css/any-theme.sass
+++ b/assets/css/any-theme.sass
@@ -91,14 +91,14 @@ a[data-toggle="collapse"]
 // Code
 // Give a slight padding and a tiny background (overridden in _syntax_<theme>.sass)
 pre.highlight
-  @extend .p-2, .m-2
+  @extend .p-2, .my-2
   background: $bg-pre
 // Fix bottom margin by `_sass/bootstrap/_reboot.scss`
 pre
   @extend .mb-0
 
 // Cards
-p:last-of-type,
+.card p:last-of-type,
 .card ul:last-of-type,
 table:last-of-type
   @extend .mb-0
