--- a/_sass/any_theme/_fonts.sass
+++ b/_sass/any_theme/_fonts.sass
@@ -11,5 +11,5 @@ $font-family-sans-serif: "Roboto", Arial, sans-serif
 $font-family-base: $font-family-sans-serif
 
 // Headings font family
-@import url("https://fonts.googleapis.com/css?family=Life+Savers")
-$font-family-headings: "Life Savers", cursive
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700")
+$font-family-headings: "Roboto Slab", serif
