--- a/_sass/any_theme/_forms.sass
+++ b/_sass/any_theme/_forms.sass
@@ -1,7 +1,7 @@
 // forms
 form
   // Set some padding
-  @extend .p-3
+  // @extend .p-3
   // Add left margin to labels and old .help-text
   .form-group
     label,
