--- a/_includes/page/login.html
+++ b/_includes/page/login.html
@@ -1,7 +1,8 @@
 <!-- Modal -->
 <div class="modal" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
+    <form class="modal-content">
+      <input type="text" hidden id="username" autocomplete="username" value="guest">
       <div class="modal-header">
         <h5 class="modal-title">Login</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -11,7 +12,7 @@
       <div class="modal-body">
         <div class="form-group mt-3">
           <label for="personal_token">Generate a <a href="https://github.com/settings/tokens" target="_blank">GitHub personal token</a> and paste here.</label>
-          <input type="text" class="form-control" id="personal_token" placeholder="personal token">
+          <input autocomplete="new-password" type="password" class="form-control" id="personal_token" placeholder="personal token">
           <small class="form-text text-muted">Will be hashed and stored on <code>localStorage</code>.<br><strong>Logout</strong> to erase permanently from the browser.</small>
         </div>
       </div>
@@ -19,6 +20,6 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" id="submitLogin" class="btn btn-primary">Login</button>
       </div>
-    </div>
+    </form>
   </div>
 </div>
