--- a/_sass/any_theme/_forms.sass
+++ b/_sass/any_theme/_forms.sass
@@ -7,7 +7,7 @@ form
     label,
     .form-text,
     .invalid-feedback
-      @extend .ml-1
+      // @extend .ml-1
   // Set right cursor over checkboxe and radio labels
   .custom-checkbox,
   .custom-radio
