Login works good

--- a/_includes/page/login.html
+++ b/_includes/page/login.html
@@ -16,7 +16,7 @@
           <div class="invalid-feedback">
             &nbsp;
           </div>
-          <small class="form-text text-muted">Personal token will be hashed and stored on <code>localStorage</code>.<br><strong>Logout</strong> to erase permanently from the browser.</small>
+          <small class="form-text text-muted">Personal token will be hashed and stored on <code>localStorage</code>.<br><strong>Logout</strong> to remove permanently from the browser.</small>
         </div>
       </div>
       <div class="modal-footer">
