Blockquotes and cleanings

--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -11,9 +11,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{ site.github.url }}">GitHub</a>
 					</li>
-					{%- include page/navbar_text.html text=page.layout title="Layout" -%}
-					{%- include page/navbar_text.html text=page.path title="Path" -%}
-					{%- include page/navbar_text.html text=theme title="Theme" -%}
+					<li class="nav-item">
+						<a class="nav-link" href="Page info">Page info</a>
+					</li>
 				</ul>
 				<ul class="navbar-nav my-lg-0">
 					<li class="nav-item">
