--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,4 +3,5 @@
 {% include page/top.html %}
 {% include page/main.html %}
 {% include page/footer.html %}
-{% include page/login.html %}
+{% include components/login.html %}
+{% include components/page_info.html %}
